--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.8",
+    "@mui/x-date-pickers": "^5.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
